--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,10 @@
 body {
     position: relative;
-    width: 100%;
+    width: 1920px;
     height: 4600px;
-    background: #0B1D26;
+    background: #354147;
     box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.2);
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
@@ -411,4 +411,147 @@ a.smc-more01 img {
     position: absolute;
     right: 0px;
 }
+
+        /*    02    */
+
+.section-main-content-02 {
+    position: static;
+    width: 1462px;
+    height: 720px;
+    left: 0px;
+    top: 920px;
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 0px 0px 200px 0px;
+}
+
+.smc-img02 {
+    position: absolute;
+    left: 0px;
+}
+
+.numeral2 {
+    position: absolute;
+    left: 680px;
+    right: 34.68%;
+    top: 958px;
+    bottom: 61.39%;
+
+    font-family: 'Gilroy-Bold',
+    sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 240px;
+    line-height: 240px;
+
+    color: #FFFFFF;
+
+    opacity: 0.1;    
+}
+
+.smc-block02 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    position: absolute;
+    left: 56.77%;
+    right: 0%;
+    top: 1061px;
+    bottom: 19.44%;
+}
+
+.smc-line02 {
+    width: 72px;
+    height: 2px;
+    left: 0px;
+    top: 10px;
+
+    background: #FBD784;
+}
+
+.smc-top02 {
+    position: absolute;
+    width: 280px;
+    height: 22px;
+    left: 96px;
+    top: -10px;
+
+    font-family: 'Gilroy-Bold',
+    sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 22px;
+
+    letter-spacing: 6px;
+    text-transform: uppercase;
+
+    color: #FBD784;
+}
+
+.smc-head02 {
+    position: absolute;
+    width: 555px;
+    height: 154px;
+    left: 0px;
+    top: 0px;
+
+    font-family: 'Times New Roman',
+    sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 77px;
+
+    color: #FFFFFF;
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 27px 0px;
+}
+
+.smc-text02 {
+    position: absolute;
+    width: 632px;
+    height: 160px;
+    left: 0px;
+    top: 190px;
+
+    font-family: 'Gilroy-Bold',
+    sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 32px;
+
+    color: #FFFFFF;
+
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    margin: 27px 0px;
+}
+
+.smc-more02 {
+    font-family: 'Gilroy-Bold',
+    sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FBD784;
+    text-decoration: none;
+
+    position: absolute;
+    top: 400px;
+;
+}
+
+a.smc-more02 img {
+    
+}
+
 
