--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,15 @@
 body {
-    position: relative;
-    width: 1900px;
-    height: 4600px;
-    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.2);
+    max-width: 1920px;
     margin: 0 auto;
-    padding: 0;
-    background: #0B1D26;
+    background-color: #354147;
 }
 
-p {
-    margin: 0;
-    padding: 0;
+article {
+    position: relative;
+    width: 1920px;
+    height: 4600px;
+    background: #0B1D26;
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -22,6 +21,7 @@ header {
     height: 25px;
     left: 80px;
     top: 64px;
+    z-index: 2;
 }
 
 .logo-mntn-header {
@@ -37,7 +37,6 @@ header {
     transition: 0.4s;
 }
 
-.nav-header-ul {}
 
 .list-item-equipment {
     position: absolute;
@@ -133,6 +132,8 @@ header {
     color: #FFFFFF;
 
     transform: rotate(90deg);
+
+    z-index: 2;
 }
 
 .social-instagram {
@@ -141,11 +142,13 @@ header {
     height: 24px;
     left: 80px;
     top: 445px;
+    z-index: 2;
 }
 
 .social-instagram:hover {
     transform: scale(1.3);
     transition: 0.4s;
+
 }
 
 .social-twitter {
@@ -154,6 +157,7 @@ header {
     height: 24px;
     left: 80px;
     top: 498px;
+    z-index: 2;
 }
 
 .social-twitter:hover {
@@ -175,6 +179,8 @@ header {
     height: 310px;
     left: 500px;
     top: 287px;
+
+    z-index: 2;
 }
 
 .rectangle {
@@ -248,14 +254,24 @@ header {
     color: #FFFFFF;
     text-decoration: none;
 
+    background-color: inherit;
+    border: solid 1px #FFFFFF;
+    border-radius: 10px;
+    padding: 7px 0px 7px 7px;
+}
+
+
+.first-content-scroll-down:hover {
+    transform: scale(1.15);
+    transition: 0.5s;
 }
 
 a.first-content-scroll-down img {
     position: absolute;
     width: 16px;
     height: 24px;
-    left: 110px;
-    top: 0px;
+    left: 115px;
+    top: 7px;
 }
 
 
@@ -272,6 +288,7 @@ a.first-content-scroll-down img {
     height: 3040px;
     left: 246px;
     top: 1440px;
+    z-index: 2;
 
 
     /* border: solid 2px rgb(28, 154, 255); */
@@ -333,7 +350,7 @@ a.first-content-scroll-down img {
     width: 202px;
     height: 22px;
     left: 96px;
-    top: 0px;
+    top: -15px;
 
     font-family: 'Gilroy-Bold',
         sans-serif;
@@ -391,26 +408,32 @@ a.first-content-scroll-down img {
     margin: 27px 0px;
 }
 
-.smc-more01 {
+.read-more-arrow {
     font-family: 'Gilroy-Bold',
         sans-serif;
-    position: static;
-    width: 127px;
-    height: 22px;
-    left: 0px;
-    top: 417px;
-    text-decoration: none;
-    flex: none;
-    order: 3;
-    align-self: flex-start;
-    flex-grow: 0;
-    margin: 27px 0px;
+    font-size: 18px;
+    line-height: 22px;
     color: #FBD784;
+    text-decoration: none;
 }
 
-a.smc-more01 img {
+.rm1 {
+    border: solid 1px #FBD784;
+    border-radius: 10px;
+    padding: 3px 5px 5px 5px;
+    background-color: inherit;
+}
+
+.rm1:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+a.read-more-arrow img {
     margin-left: 10px;
 }
+
+
 
 .smc-img01 {
     position: absolute;
@@ -483,7 +506,7 @@ a.smc-more01 img {
     width: 280px;
     height: 22px;
     left: 96px;
-    top: -10px;
+    top: -27px;
 
     font-family: 'Gilroy-Bold',
         sans-serif;
@@ -552,8 +575,19 @@ a.smc-more01 img {
 
     position: absolute;
     top: 400px;
+    border: #FBD784 solid 1px;
+    padding: 3px 5px 7px 5px;
+    border-radius: 10px;
 }
 
+.smc-more02:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+a.smc-more02 img {
+    margin-left: 10px;
+}
 
 /*    03    */
 .section-main-content-03 {
@@ -613,6 +647,7 @@ a.smc-more01 img {
 
     position: absolute;
     left: 90px;
+    top: -15px;
     text-transform: uppercase;
     letter-spacing: 6px;
 
@@ -630,7 +665,7 @@ a.smc-more01 img {
     height: 155px;
 
     position: absolute;
-    top: 50px;
+    top: -20px;
 }
 
 .smc-text03 {
@@ -649,7 +684,7 @@ a.smc-more01 img {
 
 .smc-more03 {
     position: absolute;
-    bottom: 0px;
+    bottom: -20px;
     left: 0px;
     width: 130px;
     height: 22px;
@@ -661,6 +696,19 @@ a.smc-more01 img {
     color: #FBD784;
 
     text-decoration: none;
+
+    border: #FBD784 solid 1px;
+    padding: 3px 5px 7px 5px;
+    border-radius: 10px;
+}
+
+.smc-more03:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+a.smc-more03 img {
+    margin-left: 10px;
 }
 
 
@@ -783,6 +831,14 @@ a.smc-more01 img {
     margin: 0px 0px 10px 0px;
 }
 
+footer a li:hover {
+    color: #FBD784;
+    font-family: 'Gilroy-Bold',
+        sans-serif;
+    font-style: normal;
+    font-weight: bold;
+}
+
 .list--items21 {
     font-family: 'Gilroy-Bold',
         sans-serif;
@@ -793,4 +849,53 @@ a.smc-more01 img {
     margin-bottom: 25px;
 
     color: #FBD784;
+}
+
+/* BACKGROUND */
+
+.bg-content {
+    position: absolute;
+    width: 1920px;
+    height: 700px;
+    left: 0px;
+    top: 1200px;
+    background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0B1D26 61.38%);
+    z-index: 1;
+}
+
+div.vg {
+    position: absolute;
+    width: 1920px;
+    height: 926px;
+    left: 0px;
+    top: 768px;
+    background: url(/style/bg/VG.png)
+}
+
+div.mg {
+    position: absolute;
+    width: 1920px;
+    height: 1422px;
+    left: 0px;
+    top: 64px;
+    background: url(/style/bg/MG.png);
+}
+
+.bg-hero {
+    position: absolute;
+    width: 1920px;
+    height: 1200px;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(330.24deg, rgba(11, 29, 38, 0) 31.06%, #0B1D26 108.93%);
+    z-index: 1;
+}
+
+div.hg {
+    position: absolute;
+    width: 1920px;
+    height: 1513px;
+    left: 0px;
+    top: -400px;
+    background: url(/style/bg/HG.png) no-repeat;
 }
