--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #354147;
 }
 
-article {
+main {
     position: relative;
     width: 1920px;
     height: 4600px;
@@ -415,16 +415,15 @@ a.first-content-scroll-down img {
     line-height: 22px;
     color: #FBD784;
     text-decoration: none;
-}
 
-.rm1 {
-    border: solid 1px #FBD784;
+    position: absolute;
+    top: 400px;
+    border: #FBD784 solid 1px;
+    padding: 3px 5px 7px 5px;
     border-radius: 10px;
-    padding: 3px 5px 5px 5px;
-    background-color: inherit;
 }
 
-.rm1:hover {
+.read-more-arrow:hover {
     transform: scale(1.2);
     transition: 0.5s;
 }
@@ -774,7 +773,7 @@ a.smc-more03 img {
     list-style: none;
     position: absolute;
     right: 375px;
-    bottom: 0px;
+    bottom: 50px;
     box-sizing: border-box;
     text-align: left;
 }
@@ -791,7 +790,7 @@ a.smc-more03 img {
 
 }
 
-.footer-ulist-01 a li {
+.footer-ulist-01 li a {
     margin: 0px 0px 10px 0px;
 }
 
@@ -827,11 +826,11 @@ a.smc-more03 img {
     line-height: 32px;
 }
 
-.footer-ulist-02 a li {
+.footer-ulist-02 li a {
     margin: 0px 0px 10px 0px;
 }
 
-footer a li:hover {
+footer li a:hover {
     color: #FBD784;
     font-family: 'Gilroy-Bold',
         sans-serif;
